<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/island"
    tools:context=".EndActivity">

    <ImageView
        android:id="@+id/end_Logo"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/txt_FinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/walyer"
        android:textSize="15sp"
        android:text="@string/end_final_score"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginStart="50dp"
        android:layout_below="@id/txt_GameOverMsg"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnd_StartNewGame"
        android:layout_centerInParent="true"
        android:text="@string/end_start_new_game"
        android:fontFamily="@font/walyer"
        android:padding="10dp"
        android:textSize="10sp"
        android:backgroundTint="@color/colorBackground"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEnd_GoToMenu"
        android:layout_below="@+id/btnEnd_StartNewGame"
        android:layout_centerInParent="true"
        android:text="@string/end_start_menu"
        android:fontFamily="@font/walyer"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorButtons"/>


    <TextView
        android:id="@+id/txt_GameOverMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_over"
        android:textSize="25sp"
        android:fontFamily="@font/walyer"
        android:textColor="#FFFFFF"
        android:layout_below="@id/end_Logo"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/img_SadStitch"
        android:layout_width="320dp"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/sadstitch2"/>

</RelativeLayout>