<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_fragment2_table"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1"
    android:gravity="center">
    <TableRow
        android:background="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0"
        >

        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            >
        </TableRow>
    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_name"
            android:fontFamily="@font/walyer"
            android:textSize="15sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#C6FF9100"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_score"
            android:fontFamily="@font/walyer"
            android:textSize="15sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#C6FF9100"
            android:gravity="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#C6FF9100"
            android:layout_column="2"/>

    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#F7EDA4"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#F7EDA4"
            android:gravity="center"
            />

    </TableRow>



    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#F7EDA4"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#F7EDA4"
            android:gravity="center"
            />
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#F7EDA4"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#F7EDA4"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#F7EDA4"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#F7EDA4"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#F7EDA4"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#F7EDA4"
            android:gravity="center"
            />

    </TableRow>
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/fragment2_TXT_name10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragment2_TXT_score10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/highScores_emptyString"
            android:textSize="10sp"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>
</TableLayout>
</RelativeLayout>

